# GamesLauncher-QT

./: CMakeLists.txt
GraLudo/: boardscene.cpp  chinczyk_window.cpp  chinczyk_window.h  pionek.h  plansza.cpp  plansza.h
Wisielec/: CMakeLists.txt  Wisielec_Window.cpp  Wisielec_Window.h  game_config.h  game_logic.cpp  game_logic.h  kosci_config.h  kosci_logic.cpp  kosci_logic.h  kosci_network.cpp  kosci_network.h  kosci_window.cpp  kosci_window.h  launcher.cpp  launcher.h  main.cpp  oknogry.ui  zasoby.qrc
